Updates for REST client and discovery crash

--- a/bundles/org.openhab.binding.isy/pom.xml
+++ b/bundles/org.openhab.binding.isy/pom.xml
@@ -14,4 +14,13 @@
 
   <name>openHAB Add-ons :: Bundles :: Isy Binding</name>
 
+  <dependencies>
+    <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>r05</version>
+    </dependency>
+  </dependencies>
+
 </project>
